# whisper-audio-transcriber

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
